2010-12-22  Marcus Mueller  <znek@mulle-kybernetik.com>

	* NSObject+FUSEOFS.[hm]: changed layout and renamed every wording of
	  'directory' into 'container'.

	* FUSEOFSMemoryFolder.[hm]: renamed to FUSEOFSMemoryContainer

	* FUSEOFSMemoryContainer.[hm]: see above

	* FUSEObjectFileSystem.m: minor fix for valueOfExtendedAttribute:...

2010-12-21  Marcus Mueller  <znek@mulle-kybernetik.com>

	* FUSEObjectFileSystem.m: added workaround for a MacFUSE bug which
	  prevented deleting extended attributes - this triggers an annoying
	  warning upon startup (we're implementing a deprecated method) which
	  is totally harmless.

	* NSObject+FUSEOFS.[hm]: added api for dealing with extended
	  attributes

	* FUSEObjectFileSystem.m: implemented extended attributes functionality
	
	* FUSEOFSMemoryObject.[hm]: new class, suiting as (new) abstract base
	  class for FUSEMemoryFile and FUSEMemoryFolder.

	* FUSEOFSMemoryFile.[hm]: code refactoring
	
	* FUSEOFSMemoryFolder.[hm]: code refactoring

2010-12-21  Marcus Mueller  <znek@mulle-kybernetik.com>

	* NSObject+FUSEOFS.[hm]: added -setFileAttributes: api

	* FUSEOFSMemoryFile.[hm]: renamed -setData: to -setFileContents,
	  renamed -setAttributes: to -setFileAttributes:

	* FUSEOFSMemoryFolder.[hm]: renamed -setAttributes: to
	  -setFileAttributes:, minor fixes and improvements

	* FUSEObjectFileSystem.m: massively improved debug logging,
	  improved moveItemAtPath:toPath:error: and fixed a major bug
	  in writeFileAtPath:...

2010-12-20  Marcus Mueller  <znek@mulle-kybernetik.com>

	* NSObject+FUSEOFS.m: minor cleanup

	* FUSEOFSFileProxy.m: properly implemented to transparently work for
	  files and folders

	* FUSEOFSMemoryFile.[hm]: new class which acts as a properly attributed
	  data object in memory

	* FUSEOFSMemoryFolder.[hm]: new class which acts as a properly
	  attributed folder object in memory

	* FUSEObjectFileSystem.m: added lots of debugging logs via new