@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2007-2010, Marcus Müller <znek@mulle-kybernetik.com>.
+  Copyright (c) 2007-2011, Marcus Müller <znek@mulle-kybernetik.com>.
   All rights reserved.
 
 
@@ -31,7 +31,6 @@
 */
 
 #import "FUSEObjectFileSystem.h"
-#import "common.h"
 #import <MacFUSE/GMUserFileSystem.h>
 #import "NSObject+FUSEOFS.h"
 #import "FUSEOFSLookupContext.h"
